RESOLVED FIXED45729
URL in address bar doesn't update when navigating to http://webkit.org/new-bug when using WebKit2
https://bugs.webkit.org/show_bug.cgi?id=45729
Summary URL in address bar doesn't update when navigating to http://webkit.org/new-bu...
Sam Weinig
Reported 2010-09-13 20:29:06 PDT
The URL in the MiniBrowser address bar doesn't update when navigating to http://webkit.org/new-bug.
Attachments
Patch (5.58 KB, patch)
2010-09-13 20:32 PDT, Sam Weinig
jhoneycutt: review+
Sam Weinig
Comment 1 2010-09-13 20:29:57 PDT
We are not updating the URL for server-side redirects so the urls returned by WKFrameCopyURL and WKFrameCopyProvisionalURL are stale.
Sam Weinig
Comment 2 2010-09-13 20:30:25 PDT
Sam Weinig
Comment 3 2010-09-13 20:32:20 PDT
Jon Honeycutt
Comment 4 2010-09-13 20:36:48 PDT
Comment on attachment 67513 [details] Patch r=me
Sam Weinig
Comment 5 2010-09-13 20:41:09 PDT
Landed in r67437.
Note You need to log in before you can comment on or make changes to this bug.