URL in address bar doesn't update when navigating to http://webkit.org/new-bug when using WebKit2 <rdar://problem/8272775> https://bugs.webkit.org/show_bug.cgi?id=45729

Reviewed by Jon Honeycutt.

Pass an updated provisional url while notifying the UIProcess of
didReceiveServerRedirectForProvisionalLoadForFrame.

* UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::didReceiveServerRedirectForProvisionalLoad):
* UIProcess/WebFrameProxy.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didReceiveMessage):
(WebKit::WebPageProxy::didReceiveServerRedirectForProvisionalLoadForFrame):
* UIProcess/WebPageProxy.h:
* WebProcess/WebCoreSupport/WebFrameLoaderClient.cpp:
(WebKit::WebFrameLoaderClient::dispatchDidReceiveServerRedirectForProvisionalLoad):



Canonical link: https://commits.webkit.org/58168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67437 268f45cc-cd09-0410-ab3c-d52691b4dbfc