WebKit2/UIProcess/WebFrameProxy.cpp
@@ -69,6 +69,11 @@ void WebFrameProxy::didStartProvisionalLoad(const String& url)
     m_provisionalURL = url;
 }
 
+void WebFrameProxy::didReceiveServerRedirectForProvisionalLoad(const String& url)
+{
+    m_provisionalURL = url;
+}
+
 void WebFrameProxy::didCommitLoad()
 {
     // FIXME: Add assertions.
